# stan

./: .gitignore  CMakeLists.txt  README  TODO.txt
controller/: CMakeLists.txt  circle.xpm  line.xpm  wx_app.cpp  wx_canvas.cpp  wx_canvas.h  wx_frame.cpp  wx_frame.h
controller/figedit/: CMakeLists.txt  break.xpm  color.xpm  colorStaticText.cpp  colorStaticText.h  grow.xpm  line.xpm  rotate_ccw.xpm  select.xpm  shrink.xpm  size.xpm  style.xpm  thick_line.xpm  thin_line.xpm  wx_app.cpp  wx_canvas.cpp  wx_canvas.h  wx_frame.cpp  wx_frame.h
controller/stan/: CMakeLists.txt  copy.xpm  cut.xpm  filmstripctrl.cpp  forward.xpm  image.xpm  line.xpm  play.xpm  reverse.xpm  rotate_cw.xpm  select.xpm  size.xpm  sound.xpm  stop.xpm  wx_app.cpp  wx_canvas.cpp  wx_canvas.h  wx_frame.cpp  wx_frame.h
controller/thumbnail/: filmstripctrl.cpp  filmstripctrl.h  thumbnailctrl.cpp  thumbnailctrl.h
data/animations/: anim2.ani  anim4.ani  anim5.ani  anim6.ani
data/figures/: test_dude1.fig
model/: CMakeCache.txt  CMakeLists.txt  animation.cpp  animation.h  edge.cpp  edge.h  figure.cpp  figure.h  frame.cpp  frame.h  image_data.cpp  image_data.h  metadata.cpp  metadata.h  node.cpp  node.h
test/: CMakeLists.txt  figtest.cpp  first.cpp  loadfig.cpp  rotfig.cpp  simplecheck.cpp  simplefig.cpp  test_anim.cpp  test_figure.cpp  test_figure.h  test_frame.cpp  test_frame.h  test_runner.cpp
utils/: CMakeLists.txt  trig.cpp  trig.h
view/: CMakeLists.txt  frame_view.h  wx_image.cpp  wx_image.h  wx_render.cpp  wx_render.h
