#link_libraries(model view controller utils cppunit boost_serialization-gcc42-mt boost_thread-gcc42-mt `wx-config --libs`)
#add_executable(first first.cpp)
#add_executable(figtest figtest.cpp)
#add_executable(loadfig loadfig.cpp)
#add_executable(simplefig simplefig.cpp)
#add_executable(simplecheck simplecheck.cpp)
#add_executable(rotfig rotfig.cpp)
#add_executable(test_runner test_runner.cpp test_figure.cpp test_frame.cpp)
