link_libraries(model view utils boost_serialization-vc80-mt-1_38 boost_thread-vc80-mt-1_38 cppunitd)
#add_executable(first first.cpp)
#add_executable(figtest figtest.cpp)
#add_executable(loadfig loadfig.cpp)
#add_executable(simplefig simplefig.cpp)
#add_executable(simplecheck simplecheck.cpp)
#add_executable(rotfig rotfig.cpp)
add_executable(test_runner test_runner.cpp test_figure.cpp test_frame.cpp)
#target_link_libraries(test_runner cppunitd_dll)
